# t_bookmarks

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.pi/extensions/: python-quality-on-agent-end.ts
app/: config.py  logging_config.py  main.py
app/api/: routes_auth.py  routes_search.py  routes_status.py  routes_sync.py
app/auth/: oauth_client.py  pkce.py  service.py  token_store.py
app/db/: schema.sql  sqlite.py
app/search/: service.py
app/sync/: bookmark_sync.py  normalizer.py
app/ui/static/: app.css  app.js
app/ui/templates/: index.html
app/xapi/: client.py
